--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 
 <body>
    <!-- NAVBAR -->
-   <nav class="flex px-[30px] py-[15px] justify-between align-center bg-white opacity-85 fixed z-15 w-full z-10">
-    <div id="nav-left" class=" flex items-center  justify-center  min-[1068px]:w-[20%]">
+   <nav class="flex px-[30px] py-[15px] justify-between align-center bg-white opacity-85 fixed z-15 w-full z-10 top-0 " >
+    <div id="nav-left" class=" flex items-center ">
         <img src="https://p1.hiclipart.com/preview/632/465/219/rotary-logo-marketing-business-customer-sales-hospital-patient-expense-png-clipart.jpg"
             alt="" class="w-[40px]">
         <p class="hover:bg-black hover:text-white border-2 border-black hover:opacity-80 duration-200 ease-in p-[5px] rounded-[10px] text-[20px] min-[768px]:text-[30px] ml-[10px] "><a href="./index.html">Your Welcome</a></p>
     </div>
     <div id="nav-rigth" class=" flex items-center max-[570px]:p-[5px] min-[570px]:justify-evenly min-[570px]:w-[55%] min-[1068px]:w-[40%]">
-        <p class="hover:bg-black hover:text-white border-2 border-black hover:opacity-80 duration-200 ease-in p-[5px] rounded-[10px] font-semibold text-[18px] min-[768px]:text-[25px] p-[5px] max-[570px]:hidden"><a href="./tax.html">Tax UI</a></p>
+        <p class="hover:bg-black hover:text-white border-2 border-black hover:opacity-80 duration-200 ease-in p-[5px] rounded-[10px] font-semibold text-[18px] min-[768px]:text-[25px] p-[5px] max-[570px]:hidden"><a href="./taxes.html">Tax UI</a></p>
         <p class="hover:bg-black hover:text-white border-2 border-black hover:opacity-80 duration-200 ease-in p-[5px] rounded-[10px] font-semibold text-[18px] min-[768px]:text-[25px] p-[5px] max-[570px]:hidden"><a href="./gemini.html">Gemini Ai</a></p>
         <p class="hover:bg-black hover:text-white border-2 border-black hover:opacity-80 duration-200 ease-in p-[5px] rounded-[10px] font-semibold text-[18px] min-[768px]:text-[25px] p-[5px] max-[570px]:hidden"><a href="./payment.html">Payment UI</a></p>
         <p class="min-[570px]:hidden border-2 border-black ">
