--- a/payment.html
+++ b/payment.html
@@ -14,14 +14,14 @@
 </head>
 
 <body class="body">
-    <nav class="flex px-[30px] py-[15px] justify-between align-center bg-white opacity-85 fixed z-15 w-full z-10">
-        <div id="nav-left" class=" flex items-center  justify-center  min-[1068px]:w-[20%]">
+    <nav class="flex px-[30px] py-[15px] justify-between align-center bg-white opacity-85 fixed z-15 w-full z-10 top-0 " >
+        <div id="nav-left" class=" flex items-center ">
             <img src="https://p1.hiclipart.com/preview/632/465/219/rotary-logo-marketing-business-customer-sales-hospital-patient-expense-png-clipart.jpg"
                 alt="" class="w-[40px]">
             <p class="hover:bg-black hover:text-white border-2 border-black hover:opacity-80 duration-200 ease-in p-[5px] rounded-[10px] text-[20px] min-[768px]:text-[30px] ml-[10px] "><a href="./index.html">Your Welcome</a></p>
         </div>
         <div id="nav-rigth" class=" flex items-center max-[570px]:p-[5px] min-[570px]:justify-evenly min-[570px]:w-[55%] min-[1068px]:w-[40%]">
-            <p class="hover:bg-black hover:text-white border-2 border-black hover:opacity-80 duration-200 ease-in p-[5px] rounded-[10px] font-semibold text-[18px] min-[768px]:text-[25px] p-[5px] max-[570px]:hidden"><a href="./tax.html">Tax UI</a></p>
+            <p class="hover:bg-black hover:text-white border-2 border-black hover:opacity-80 duration-200 ease-in p-[5px] rounded-[10px] font-semibold text-[18px] min-[768px]:text-[25px] p-[5px] max-[570px]:hidden"><a href="./taxes.html">Tax UI</a></p>
             <p class="hover:bg-black hover:text-white border-2 border-black hover:opacity-80 duration-200 ease-in p-[5px] rounded-[10px] font-semibold text-[18px] min-[768px]:text-[25px] p-[5px] max-[570px]:hidden"><a href="./gemini.html">Gemini Ai</a></p>
             <p class="hover:bg-black hover:text-white border-2 border-black hover:opacity-80 duration-200 ease-in p-[5px] rounded-[10px] font-semibold text-[18px] min-[768px]:text-[25px] p-[5px] max-[570px]:hidden"><a href="./payment.html">Payment UI</a></p>
             <p class="min-[570px]:hidden border-2 border-black ">
@@ -31,7 +31,7 @@
               </p>
         </div>
     </nav>
-    <main id="form-container" class="w-[90%] min-[900px]:w-[70%] border-2 border-red-500 flex flex-col items-center justify-end min-[650px]:h-[110vh] mx-auto pb-[20px]">
+    <main id="form-container" class="w-[90%] min-[900px]:w-[70%]  flex flex-col items-center justify-end min-[650px]:h-[110vh] mx-auto pb-[20px]">
 
 
         <form action="" class="border-2 border-white rounded-[10px] bg-black opacity-70 text-white min-[650px]:flex items-end justify-center max-[650px]:mt-[80px] min-[650px]:h-[75%] p-[20px] ">
@@ -94,8 +94,15 @@
 
             
         </form>
-        <div id="procced-btn" class="border-2 hover:border-white border-black hover:opacity-80 bg-green-500 mx-auto text-center p-[10px] text-[20px] font-semibold w-[80%] min-[:600px]:w-[56%] mt-[20px] rounded-[10px] hover:bg-black hover:text-white transition duration-300 ease-in">Procced To Checkout</div>
+        <div  class="border-2 hover:border-white border-black hover:opacity-80 bg-green-500 mx-auto text-center text-[20px] font-semibold w-[80%] min-[:600px]:w-[56%] mt-[20px] rounded-[10px] hover:bg-black hover:text-white transition duration-300 ease-in">
+            <button id="procced-btn" class="border-2 border-black w-[100%] p-[10px] rounded-[10px]">Procced To Checkout</button></div>
     </main>
+
+
+
+
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+    <script src="payment.js"></script>
 </body>
 
 </html>
