added gemini reults

--- a/payment.html
+++ b/payment.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         .body{
-            background: linear-gradient(90deg,#70d0df , #c4e0e5);
+            background: linear-gradient(90deg,#a7dcff, #ad9af1);
         }
     </style>
 </head>
@@ -40,27 +40,27 @@
                 <div>
                     <label for="name">Name:</label>
                     <br>
-                    <input type="text" id="name" class="border-2 border-black p-[3px] rounded-[5px]">
+                    <input type="text" id="name" class="border-2 border-black text-black p-[3px] rounded-[5px]">
                 </div>
                 <div>
                     <label for="email">Email:</label><br>
-                    <input type="email" id="email" class="border-2 border-black p-[3px] rounded-[5px]">
+                    <input type="email" id="email" class="border-2 text-black border-black p-[3px] rounded-[5px]">
                 </div>
                 <div>
                     <label for="address">Address:</label><br>
-                    <input type="text" id="address" class="border-2 border-black p-[3px] rounded-[5px]">
+                    <input type="text" id="address" class="border-2 text-black border-black p-[3px] rounded-[5px]">
                 </div>
                 <div>
                     <label for="city">City:</label><br>
-                    <input type="text" id="city" class="border-2 border-black p-[3px] rounded-[5px]">
+                    <input type="text" id="city" class="border-2 text-black border-black p-[3px] rounded-[5px]">
                 </div>
                 <div>
                     <label for="state">State:</label><br>
-                    <input type="text" id="state" class="border-2 border-black p-[3px] rounded-[5px]">
+                    <input type="text" id="state" class="border-2 text-black border-black p-[3px] rounded-[5px]">
                 </div>
                 <div>
                     <label for="zip-code">ZIP-Code:</label><br>
-                    <input type="number" id="zip-code" class="border-2 border-black p-[3px] rounded-[5px]">
+                    <input type="number" id="zip-code" class="border-2 text-black border-black p-[3px] rounded-[5px]">
                 </div>
             </div>
 
@@ -68,27 +68,27 @@
                 <p class="font-bold">Card Details:</p>
                 <div>
                     <label for="card">Accepted Card:</label><br>
-                    <input type="text" id="card" class="border-2 border-black p-[3px] rounded-[5px]" >
+                    <input type="text" id="card" class="border-2 text-black border-black p-[3px] rounded-[5px]" >
                 </div>
                 <div>
                     <label for="card-name">Name on Card:</label><br>
-                    <input type="text" id="card-name" class="border-2 border-black p-[3px] rounded-[5px]">
+                    <input type="text" id="card-name" class="border-2 text-black border-black p-[3px] rounded-[5px]">
                 </div>
                 <div>
                     <label for="card-no">Card Number:</label><br>
-                    <input type="number" id="card-no" class="border-2 border-black p-[3px] rounded-[5px]">
+                    <input type="number" id="card-no" class="border-2 text-black border-black p-[3px] rounded-[5px]">
                 </div>
                 <div>
                     <label for="card-month">Exp Month:</label><br>
-                    <input type="text" id="card-month" class="border-2 border-black p-[3px] rounded-[5px]">
+                    <input type="text" id="card-month" class="border-2 text-black border-black p-[3px] rounded-[5px]">
                 </div>
                 <div>
                     <label for="card-year">Exp Year:</label><br>
-                    <input type="number" id="card-year" class="border-2 border-black p-[3px] rounded-[5px]">
+                    <input type="number" id="card-year" class="border-2 text-black border-black p-[3px] rounded-[5px]">
                 </div>
                 <div>
                     <label for="cvv">CVV:</label><br>
-                    <input type="number" id="cvv" class="border-2 border-black p-[3px] rounded-[5px]"  >
+                    <input type="number" id="cvv" class="border-2 text-black border-black p-[3px] rounded-[5px]"  >
                 </div>
             </div>
 
