--- a/taxes.html
+++ b/taxes.html
@@ -5,11 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        body{
+            background: linear-gradient(90deg,#a7dcff, #ad9af1);
+        }
+    </style>
 </head>
 <body>
     
     <!-- NAVBAR -->
-    <nav class="flex px-[30px] py-[15px] justify-between align-center bg-white opacity-85 fixed z-15 w-full z-10 top-0 " >
+    <nav class="flex px-[30px] py-[15px] bg-white opacity-85 justify-between align-center fixed z-15 w-full z-10 top-0 " >
         <div id="nav-left" class=" flex items-center ">
             <img src="https://p1.hiclipart.com/preview/632/465/219/rotary-logo-marketing-business-customer-sales-hospital-patient-expense-png-clipart.jpg"
                 alt="" class="w-[40px]">
